--- a/.github/workflows/05-efilters.yaml
+++ b/.github/workflows/05-efilters.yaml
@@ -2,7 +2,7 @@ name: 05 - Event Filters
 on:
   push:
     branches:
-      - features/**
+      - features
 jobs:
   build:
     runs-on: ubuntu-latest 
